--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/RawDataLayout.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/RawDataLayout.axml
@@ -27,7 +27,7 @@
         <ListView
             android:id="@+id/lvRawData"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_margin="10dp"
             android:divider="#005DA9"
             android:dividerHeight="5dp" />
