--- a/Analyzer/Datalyze/Datalyze/Resources/layout/Main.axml
+++ b/Analyzer/Datalyze/Datalyze/Resources/layout/Main.axml
@@ -18,7 +18,7 @@
         android:id="@+id/btnWifi"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Wifi"
+        android:text="WiFi"
         android:fontFamily="Assets/SourceSansPro-Light.tff"
         android:textSize="20dp"
         android:gravity="center_horizontal|center_vertical"
