--- a/Analyzer/Datalyze/Datalyze/Resources/layout/Main.axml
+++ b/Analyzer/Datalyze/Datalyze/Resources/layout/Main.axml
@@ -49,7 +49,7 @@
         Infineon logo 
         -->
         <ImageView
-            android:src="@drawable/ifx_logo"
+            android:src="@drawable/ifx_logo_medium"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:scaleType="centerInside"
