Add improved startup UI

--- a/Analyzer/Datalyze/Datalyze/Resources/layout/WifiAnalyzeLayout.axml
+++ b/Analyzer/Datalyze/Datalyze/Resources/layout/WifiAnalyzeLayout.axml
@@ -4,6 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/tvHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="WiFi Analysis"
+        android:gravity="center_horizontal"
+        android:textSize="36dp"
+        android:layout_margin="20dp" />
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Do some Wifi analyzing"
@@ -48,16 +56,25 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btSend"
+        android:id="@+id/btnSpeed"
         android:textSize="20dp"
         android:gravity="center_horizontal"
         android:layout_margin="10dp"
-        android:text="Wait until connected" />
-    <TextView
+        android:text="Test Speed" />
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvRead"
+        android:id="@+id/btnRegularity"
         android:textSize="20dp"
         android:gravity="center_horizontal"
-        android:layout_margin="10dp" />
+        android:layout_margin="10dp"
+        android:text="Test Regularity" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnCorrectness"
+        android:textSize="20dp"
+        android:gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:text="Test Correctness" />
 </LinearLayout>
