Minor Bug fixes WifiDatalyze

--- a/Analyzer/Datalyze/Datalyze/Resources/layout/WifiAnalyzeLayout.axml
+++ b/Analyzer/Datalyze/Datalyze/Resources/layout/WifiAnalyzeLayout.axml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Do some Wifi analyzing"
+            android:text="Bytes"
             android:gravity="center_horizontal"
             android:textSize="20dp"
             android:layout_margin="10dp" />
