Final BTDronection v1.0 + APK

--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/Main.axml
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/Main.axml
@@ -69,7 +69,7 @@
         Infineon logo 
         -->
         <ImageView
-            android:src="@drawable/ifx_logo"
+            android:src="@drawable/ifxlogo"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:scaleType="centerInside"
@@ -82,7 +82,7 @@
             android:id="@+id/tvFooter"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="\u00A9 2017 Infineon Technologies Austria AG"
+            android:text="\u00A9 2017-2018 Infineon Technologies Austria AG"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
             android:fontFamily="Assets/SourceSansPro-Light.ttf" />
