--- a/Analyzer/Datalyze/Datalyze/Resources/layout/BTAnalyzeLayout.axml
+++ b/Analyzer/Datalyze/Datalyze/Resources/layout/BTAnalyzeLayout.axml
@@ -1,70 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Do some Bluetooth analyzing"
-        android:gravity="center_horizontal"
-        android:textSize="20dp"
-        android:layout_margin="10dp" />
-  <TextView
+        android:layout_height="match_parent"
+        android:isScrollContainer="true">
+        <TextView
+            android:id="@+id/tvBTHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Bluetooth Analysis"
+            android:gravity="center_horizontal"
+            android:textSize="36dp"
+            android:layout_margin="20dp" />
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Bytes"
             android:gravity="center_horizontal"
             android:textSize="20dp"
             android:layout_margin="10dp" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etText"
-        android:textSize="20dp"
-        android:gravity="center_horizontal"
-        android:layout_margin="10dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Repetitions"
-        android:gravity="center_horizontal"
-        android:textSize="20dp"
-        android:layout_margin="10dp" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etRepetitions"
-        android:textSize="20dp"
-        android:gravity="center_horizontal"
-        android:layout_margin="10dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Delay"
-        android:gravity="center_horizontal"
-        android:textSize="20dp"
-        android:layout_margin="10dp" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etDelay"
-        android:textSize="20dp"
-        android:gravity="center_horizontal"
-        android:layout_margin="10dp" />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btSend"
-        android:textSize="20dp"
-        android:gravity="center_horizontal"
-        android:layout_margin="10dp"
-        android:text="Wait until connected" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvRead"
-        android:textSize="8dp"
-        android:gravity="center_horizontal"
-        android:layout_margin="5dp" />
-</LinearLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/etBTText"
+            android:textSize="20dp"
+            android:gravity="center_horizontal"
+            android:layout_margin="10dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Repetitions"
+            android:gravity="center_horizontal"
+            android:textSize="20dp"
+            android:layout_margin="10dp" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/etBTRepetitions"
+            android:textSize="20dp"
+            android:gravity="center_horizontal"
+            android:layout_margin="10dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delay"
+            android:gravity="center_horizontal"
+            android:textSize="20dp"
+            android:layout_margin="10dp" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/etBTDelay"
+            android:textSize="20dp"
+            android:gravity="center_horizontal"
+            android:layout_margin="10dp" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btBTAnalyse"
+            android:textSize="20dp"
+            android:gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:text="Analyze" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btBTGetResult"
+            android:textSize="20dp"
+            android:gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:text="Send Result" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvBTRead"
+            android:gravity="center_horizontal"
+            android:textSize="20dp"
+            android:layout_margin="10dp" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btBTSaveResult"
+            android:textSize="20dp"
+            android:gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:text="Save Result"
+            android:visibility="gone" />
+    </LinearLayout>
+</ScrollView>
